feat: enumerate github org scopes
